<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/login_bg" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/logo" />
            </RelativeLayout>


            <com.bantu.lift.user.customtext.TextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:text="Login"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:focusableInTouchMode="false"
                    android:textColorHint="@color/txt_grey"
                    app:backgroundTint="@color/txt_grey"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <EditText
                        android:id="@+id/et_userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/user1"
                        android:drawablePadding="4dp"
                        android:hint="@string/hint_email_phone"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"

                        android:theme="@style/Theme.App.Base"
                        app:backgroundTint="@color/txt_grey" />

                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:focusableInTouchMode="false"
                    android:textColorHint="@color/txt_grey"
                    app:backgroundTint="@color/txt_grey"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/pass1"
                        android:drawablePadding="4dp"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:theme="@style/Theme.App.Base"
                        app:backgroundTint="@color/txt_grey" />

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <com.bantu.lift.user.customtext.TextViewRegular
                android:id="@+id/tv_forgot_passowrd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:gravity="end"
                android:text="@string/forgot_password"
                android:textColor="@color/greyish" />

            <com.bantu.lift.user.customtext.ButtonBold
                android:id="@+id/loginBtn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:background="@drawable/login_button_bg"
                android:text="@string/action_sign_in"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.bantu.lift.user.customtext.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/don_t_have_an_account_register_now"
                    android:textColor="@color/greyish"
                    android:textSize="16sp" />

                <com.bantu.lift.user.customtext.TextViewRegular
                    android:id="@+id/tv_register_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text=" Sign Up"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:indeterminateTint="@color/progress_color"
        android:visibility="gone" />

</RelativeLayout>